2021-02-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_String_Draw): Control pen position better.

2021-02-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (write_header): Fix header formatting.

2021-02-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grblit.c: Clean up pointer and variable types.

2021-02-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Make `-f ... -e ...` work.

	* src/ftgrid.c (parse_cmdline): Use flags to set a default character
	index after option loop.

2021-01-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grblit.c (blit_mono_to_*): Slightly faster variants.

2021-01-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Decouple the legacy and alpha blenders.

	* graph/grblit.c (grBlitGlyphToBitmap): Do not call
	`grBlitGlyphToSurface'.
	* src/*: s/grBlitGlyphToBitmap/grBlitGlyphToSurface/.

2021-01-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfont.c (gr_charcell): Minor.

2021-01-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Handle mono bitmaps in the main blender.

	* graph/gblany.h (_gblender_blit_mono_*): Implement it.
	* graph/gblblit.c (gblender_blit_init): Recognize mono bitmaps.
	* graph/gblblit.h (GBlenderSourceFormat): Add GBLENDER_SOURCE_MONO.

2021-01-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (FT_INCLUDES): Drop `$(TOP_DIR)/src/dlg`.

2021-01-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Reduce color conversions in the blender (part 2).

	* graph/gblender.h (GBlenderBGR): Define color channel storage.
	* graph/gblblit.c (GDST_CHANNELS): Redefined.
	(GDST_READ): Merged into...
	(GDST_PIX): Redefined.
	* graph/gblany.h (*): Major revisions.

2021-01-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.h (GBLENDER_CHANNEL_VARS): Squash reintroduced bug.

2021-01-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (gr_fill_hline_4): Clean up.
